2019-07-23
==========
    1. Ported to .NET Standard.

2019-08-12
==========
    Version: 2.19.1-dev-0812-0152
    1. Added extensions.

2019-08-15
==========
    Version: 2.19.1-dev-0815-1201
    1. Added methods to ServiceClientExtensions.

2019-10-21
==========
    Version: v3.0
    1. Release v3.0.

2019-10-29
==========
    Version: 3.1
    1. Release v3.1.

2020-10-12
==========
    1. Now on Azure DevOps and NuGet.org
    2. Preparing for release 1.3.3.

2021-03-11
==========
    1. Resurrection.

2021-03-12
==========
    1. Updated refs.