@@ -2,20 +2,21 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
     <id>TauCode.WebApi.Client</id>
-    <version>1.3.2.7-dev-2021-03-12-15-13</version>
+    <version>1.3.2.7-dev-2021-04-22-09-25</version>
     <authors>TauCode</authors>
     <owners>TauCode</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <license type="file">LICENSE.txt</license>
     <projectUrl>https://github.com/taucode/taucode.webapi.client</projectUrl>
+    <repository type="git" url="https://github.com/taucode/taucode.webapi.client"/>
     <description>TauCode Web API client side support</description>
     <releaseNotes>
-      Updated refs.
+      Added cancellation tokens for async methods.
     </releaseNotes>
     <tags>taucode webapi client</tags>
     <dependencies>
       <group targetFramework=".NETStandard2.1">
-        <dependency id="Newtonsoft.Json" version="12.0.3" />
+        <dependency id="Newtonsoft.Json" version="13.0.1" />
         <dependency id="TauCode.Data" version="1.3.2.7-dev-2021-03-01-19-15" />
         <dependency id="TauCode.WebApi" version="1.3.2.7-dev-2021-03-12-15-13" />
       </group>
