@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="TauCode.Data" Version="1.3.2.7-dev-2021-03-01-19-15" />
     <PackageReference Include="TauCode.WebApi" Version="1.3.2.7-dev-2021-03-12-15-13" />
   </ItemGroup>
